drupal/profiles/takepart/themes/takepart3/css/style.css
/* ... */
.node-type-takepart-page .main-content h2 {
    font-size:22px;
    color:#000;
    line-height: 120%;
    margin-bottom: 12px;
}

.node-profile h2 {
    color: #000;
    font-size: 36px;
    line-height: 100%;
    font-weight: bold;
    text-transform: none;
}

/* Full Width Top Region */
.region-full-width-top {
    width:auto;
    padding:10px;
    background-color: #FFF;
}

/* Full Width Bottom Region */
.region-full-width-bottom {
    width:auto;
    padding:10px;
    background-color: #FFF;
}

.region-full-width-top ul,
.region-full-width-bottom ul
{
    font-size: 14px;
    line-height: 24px;
    list-style: disc outside none;
    margin: 0 0 20px 20px;
}

.region-full-width-top ol,
.region-full-width-bottom ol {
    font-size: 14px;
    line-height: 24px;
    list-style: decimal outside none;
    margin: 0 0 20px 20px;
}

/* headers in blocks in main body */
.main-content .node-topic-front h2,
.main-content .block-boxes h2,
.main-content .block-boxes-title-features h2,
body.front .main-content .block-boxes-current-promo h2
{
    border-top:1px dotted #000;
    margin:0;
    padding:10px 0;
    background:url(../images/2012-02-08/45deg_lines_large.gif) repeat-x scroll 0 10px transparent;
    width:100%;
}
.node-type-takepart-campaign .main-content h2,
.node-type-takepart-campaign .region-highlighted h2{
    color:#99bbcc;
    font-size: 22px;
    line-height: 120%;
    font-weight: bold;
    background: none transparent;
}

.node-type-topic-front h1.title,
.page-taxonomy-term h1.title,
.main-content .node-topic-front h2.title {
    border-top:1px dotted #000;
    margin:0;
    padding:8px 0;
    background:url(../images/2012-02-08/45deg_lines_large.gif) repeat-x scroll left center transparent;
    width:100%;
    font-family: TradeGothicLTStdCnBold, sans-serif;
    font-size: 26px;
    line-height: 26px;
}

.node-type-topic-front h1.title span,
.page-taxonomy-term h1.title {
    margin-bottom: 8px;
}

.page-taxonomy-term h1.title {
    border-bottom: 1px solid #D9E7EE;
}

.node-type-takepart-campaign h2 span,
.node-type-topic-front h1.title span,
.page-taxonomy-term h1.title span,
.main-content .node-topic-front h2 span,
.main-content .block-boxes-title-features h2 span,
body.front .main-content .block-boxes-current-promo h2 span,
.main-content .block-boxes h2 span {
    padding:0 8px 0 0;
    background:none repeat scroll 0 0 #FFF;
    text-transform: uppercase;
    font-weight: 300;
}
.main-content .block-boxes-current-taxonomy_search_list h2 {
    margin: 15px 0;
}

.main-content .block-boxes-title-secondary-headlines .content,
.main-content .block-boxes-title-features .content,
.main-content .block-boxes-title-secondary-features .content, 
.main-content .block-boxes-title-secondary .content 
{
    background-color:#EFF3F5;
}

/*featured blocks, img gallery styles */
.main-content .block-boxes-title-secondary-headlines .views-row,
.main-content .block-boxes-title-features .views-row,
.main-content .block-boxes-title-secondary-features .views-row,
.main-content .block-boxes-title-secondary .views-row,
body.front .main-content .block-boxes-current-promo .views-row
{
    display:table;
    background-color:#FFF;
    margin:5px;
    vertical-align:top;
    width:200px;
    float:left;
}
.main-content .block-boxes-title-secondary-headlines .views-row,
.main-content .block-boxes-title-secondary-features .views-row, 
.main-content .block-boxes-title-secondary .views-row {
    height: 250px;
    overflow: hidden;
    margin:10px 0 10px 10px;
}
.main-content .block-boxes-title-secondary-headlines .views-field-field-thumbnail img,
.main-content .block-boxes-title-secondary-features .views-field-field-thumbnail img, 
.main-content .block-boxes-title-secondary .views-field-field-thumbnail img {
    width:200px;
    height:150px;
    border:none;
}

body.front .main-content .block-boxes-current-promo .view-content,
.main-content .block-boxes-title-features .view-content {
    display: inline-block;
    padding: 5px 4px 1px;
}
.main-content .block-boxes-title-secondary-headlines .views-field-php,
.main-content .block-boxes-title-secondary-features .views-field-php, 
.main-content .block-boxes-title-secondary .views-field-php {
    font-size: 16px;
    padding:0 5px;
}
.main-content .block-boxes-title-secondary-headlines .views-field-field-promo-text,
.main-content .block-boxes-title-secondary-features .views-field-field-promo-text, 
.main-content .block-boxes-title-secondary .views-field-field-promo-text {
    padding:0 5px;
    font-size: 13px;
    line-height: 15px;
}
.main-content .block-boxes-title-secondary-headlines .views-field-php,
.main-content .block-boxes-title-secondary-features .views-field-php, 
.main-content .block-boxes-title-secondary .views-field-php {
    margin:10px 0 0 0;
}
.main-content .block-boxes-title-features .views-field-field-thumbnail-1,
body.front .main-content .block-boxes-current-promo .views-field-field-thumbnail-1
{
    overflow:visible;
    position:relative;
    width:0;
}

.main-content .block-boxes-title-features .views-field-field-thumbnail-1 .field-content,
body.front .main-content .block-boxes-current-promo .views-field-field-thumbnail-1 .field-content
{
    height:150px;
    width:200px;
    overflow:hidden;
    margin-bottom:10px;
}

.main-content .block-boxes-title-features .views-field-field-thumbnail-1 .field-content img,
body.front .main-content .block-boxes-current-promo .views-field-field-thumbnail-1 .field-content img
{
    width:200px;
}

/*hover state*/
.main-content .block-boxes-title-features .views-row:hover,
body.front .main-content .block-boxes-current-promo .views-row:hover
{
    border:3px solid #14ade7;
    margin:2px;
}
/* ... */

